--- a/src/index.scss
+++ b/src/index.scss
@@ -56,7 +56,7 @@ code {
 
 .App {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   padding: var(--nav-size) 1rem 0 1rem;
   color: var(--font-color);
   background-color: var(--bg-primary);
